@startuml Overview
package config.py{

}
package growth_cone.py{
    class GrowthCone
}
package potential_calculation.py{
    
}
package result.py{
    class Result
}
package object_factory.py{
    
}
package simulation.py{
    class Simulation
}
package substrate.py{
    class Substrate
}
package visualization.py{

}

config.py <-- object_factory.py :  uses 
object_factory.py --> GrowthCone : creates 
object_factory.py --> Substrate : creates 
object_factory.py -> Simulation : creates
Simulation --> potential_calculation.py : uses 
Simulation ---> Result : creates 
Result <-- visualization.py : visualizes
Substrate <-- visualization.py : visualizes

Simulation *--- Substrate 
Simulation *--- GrowthCone

@enduml

@startuml Substrate
package substrate.py{
    abstract class BaseSubstrate
    abstract class BaseStripeSubstrate
    abstract class BaseGapSubstrate
    class ContinuousGradientSubstrate
    class WedgeSubstrate
    class StripeFwdSubstrate
    class StripeRewSubstrate
    class StripeDuoSubstrate
    class GapSubstrateRR
    class GapSubstrateRB
    class GapSubstrateBR
    class GapSubstrateBB
}

BaseStripeSubstrate --> StripeDuoSubstrate
BaseStripeSubstrate --> StripeRewSubstrate
BaseStripeSubstrate --> StripeFwdSubstrate

BaseSubstrate --> BaseStripeSubstrate

BaseSubstrate --> WedgeSubstrate
BaseSubstrate --> ContinuousGradientSubstrate


BaseGapSubstrate --> GapSubstrateBB
BaseGapSubstrate --> GapSubstrateBR
BaseGapSubstrate --> GapSubstrateRB
BaseGapSubstrate --> GapSubstrateRR

BaseSubstrate --> BaseGapSubstrate


@enduml
